# DonutEngine

./: .gitignore  README.md
CXX_Donut/: CMakeLists.txt  donut.cpp  ft_donut.hpp  main.cpp
Trainning/: animation_explanation  animation_explanation.c  c.c  d  d.c  demo.c  donut.c  fun.md  funny.c  lighting_explanation  lighting_explanation.c  math_explanation  math_explanation.c  torus.c
ft_donut/: Makefile  README.md  main.c
ft_donut/includes/: ft_donut.h
ft_donut/sources/: ft_donut_init.c  ft_donut_math.c  ft_donut_render.c  ft_donut_utils.c
other/: commented_prime_version.c  ft_donut_one_file.c  note.txt  prime_version.c
other/fire/: compact_fire.c  easy_fire.c  fire_ascii.c  less_long_fire.c  memory_fire.c  not_obfucated.c  study_fire.c
